couple of npm scripts and a README

--- a/package.json
+++ b/package.json
@@ -5,5 +5,11 @@
   "main": "index.js",
   "repository": "git@github.com:20kbudget/hello.git",
   "author": "Fabricio C Zuardi <fabricio@fabricio.org>",
-  "license": "AGPL-3.0"
+  "license": "AGPL-3.0",
+  "scripts": {
+      "destroy": "rm -rf ./dist",
+      "create": "cordova create dist com.mnmo.hello Hello --template cordova-game-shell",
+      "postcreate": "cd dist && cordova platform add android",
+      "debug": "cd dist && cordova run"
+  }
 }
