changed package name to fix npm register conflict

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "hello",
+  "name": "hello20k",
   "version": "0.1.1",
   "description": "A pixi + cordova hello world",
   "main": "index.js",
